force-app/main/default/objects/Superbill__c/Superbill__c.object-meta.xml
<CustomObject>
    <description
  >Claim-ready snapshot of an encounter for billing review and downstream claim export.</description>
    <label>Superbill</label>
    <nameField>
        <displayFormat>SB-{00000000}</displayFormat>
        <label>Superbill Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Superbills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>