force-app/main/default/objects/Superbill__c/fields/Billing_Organization__c.field-meta.xml
<CustomField>
    <fullName>Billing_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Organization</label>
    <referenceTo>Organization__c</referenceTo>
    <relationshipLabel>Superbills</relationshipLabel>
    <relationshipName>Superbills</relationshipName>
    <type>Lookup</type>
</CustomField>