force-app/main/default/objects/Superbill__c/fields/Billing_Provider_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Country__c</fullName>
    <label>Billing Provider Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>