force-app/main/default/objects/Superbill__c/fields/Billing_Provider_EIN__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_EIN__c</fullName>
    <label>Billing Provider EIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>