force-app/main/default/objects/Superbill__c/fields/Billing_Provider_NPI__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_NPI__c</fullName>
    <label>Billing Provider NPI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>