force-app/main/default/objects/Superbill__c/fields/Billing_Provider_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Postal_Code__c</fullName>
    <label>Billing Provider Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>