force-app/main/default/objects/Superbill__c/fields/Billing_Provider_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Street__c</fullName>
    <label>Billing Provider Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>