force-app/main/default/objects/Superbill__c/fields/Billing_Provider_Taxonomy__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Taxonomy__c</fullName>
    <label>Billing Provider Taxonomy</label>
    <length>10</length>
    <type>Text</type>
</CustomField>