force-app/main/default/objects/Superbill__c/fields/Claim_Filing_Code__c.field-meta.xml
<CustomField>
    <fullName>Claim_Filing_Code__c</fullName><description>Frozen X12 claim filing indicator from the payer.</description><label>Claim Filing Code</label><length>2</length><type>Text</type>
</CustomField>