force-app/main/default/objects/Superbill__c/fields/Coverage__c.field-meta.xml
<CustomField>
    <fullName>Coverage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coverage</label>
    <referenceTo>Coverage__c</referenceTo>
    <relationshipLabel>Superbills</relationshipLabel>
    <relationshipName>Superbills</relationshipName>
    <type>Lookup</type>
</CustomField>