force-app/main/default/objects/Superbill__c/fields/Coverage_Effective_End__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Effective_End__c</fullName>
    <label>Coverage Effective End</label>
    <type>Date</type>
</CustomField>