force-app/main/default/objects/Superbill__c/fields/Coverage_Effective_Start__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Effective_Start__c</fullName>
    <label>Coverage Effective Start</label>
    <type>Date</type>
</CustomField>