force-app/main/default/objects/Superbill__c/fields/Date_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Service__c</fullName>
    <label>Date of Service</label>
    <type>Date</type>
</CustomField>