force-app/main/default/objects/Superbill__c/fields/Encounter__c.field-meta.xml
<CustomField>
    <fullName>Encounter__c</fullName>
    <label>Encounter</label>
    <referenceTo>Encounter__c</referenceTo>
    <relationshipLabel>Superbills</relationshipLabel>
    <relationshipName>Superbills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>