force-app/main/default/objects/Superbill__c/fields/Encounter_Key__c.field-meta.xml
<CustomField>
    <fullName>Encounter_Key__c</fullName>
    <externalId>true</externalId>
    <label>Encounter Key</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>