force-app/main/default/objects/Superbill__c/fields/Patient_City__c.field-meta.xml
<CustomField>
    <fullName>Patient_City__c</fullName><label>Patient City</label><length>80</length><required>false</required><type>Text</type>
</CustomField>