force-app/main/default/objects/Superbill__c/fields/Patient_Country__c.field-meta.xml
<CustomField>
    <fullName>Patient_Country__c</fullName><label>Patient Country</label><length>80</length><required>false</required><type>Text</type>
</CustomField>