force-app/main/default/objects/Superbill__c/fields/Patient_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Patient_Date_of_Birth__c</fullName><label>Patient Date of Birth</label><required>false</required><type>Date</type>
</CustomField>