force-app/main/default/objects/Superbill__c/fields/Patient_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Patient_Last_Name__c</fullName><label>Patient Last Name</label><length>80</length><required>false</required><type>Text</type>
</CustomField>