force-app/main/default/objects/Superbill__c/fields/Patient_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Patient_Postal_Code__c</fullName><label>Patient Postal Code</label><length>20</length><required>false</required><type>Text</type>
</CustomField>