force-app/main/default/objects/Superbill__c/fields/Patient_Sex__c.field-meta.xml
<CustomField>
    <fullName>Patient_Sex__c</fullName><label>Patient Sex</label><length>40</length><required>false</required><type>Text</type>
</CustomField>