force-app/main/default/objects/Superbill__c/fields/Patient_State__c.field-meta.xml
<CustomField>
    <fullName>Patient_State__c</fullName><label>Patient State</label><length>80</length><required>false</required><type>Text</type>
</CustomField>