force-app/main/default/objects/Superbill__c/fields/Patient_Street__c.field-meta.xml
<CustomField>
    <fullName>Patient_Street__c</fullName><label>Patient Street</label><length>255</length><required>false</required><type>Text</type>
</CustomField>