force-app/main/default/objects/Superbill__c/fields/Payer_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Payer_Identifier__c</fullName>
    <label>Payer Identifier</label>
    <length>80</length>
    <type>Text</type>
</CustomField>