force-app/main/default/objects/Superbill__c/fields/Place_of_Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Place_of_Service_Code__c</fullName><label>Place of Service</label><required>false</required><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>02</fullName><default>false</default><label>02 - Telehealth (not home)</label></value>
        <value><fullName>10</fullName><default>false</default><label>10 - Telehealth (home)</label></value>
        <value><fullName>11</fullName><default>false</default><label>11 - Office</label></value>
        <value><fullName>12</fullName><default>false</default><label>12 - Home</label></value>
        <value><fullName>21</fullName><default>false</default><label>21 - Inpatient Hospital</label></value>
        <value><fullName>22</fullName><default>false</default><label>22 - Outpatient Hospital</label></value>
        <value><fullName>23</fullName><default>false</default><label>23 - Emergency Room</label></value>
        <value><fullName>24</fullName><default>false</default><label>24 - Ambulatory Surgical Center</label></value>
        <value><fullName>31</fullName><default>false</default><label>31 - Skilled Nursing Facility</label></value>
        <value><fullName>32</fullName><default>false</default><label>32 - Nursing Facility</label></value>
        <value><fullName>49</fullName><default>false</default><label>49 - Independent Clinic</label></value>
        <value><fullName>50</fullName><default>false</default><label>50 - Federally Qualified Health Center</label></value>
        <value><fullName>53</fullName><default>false</default><label>53 - Community Mental Health Center</label></value>
        <value><fullName>71</fullName><default>false</default><label>71 - Public Health Clinic</label></value>
        <value><fullName>72</fullName><default>false</default><label>72 - Rural Health Clinic</label></value>
        <value><fullName>81</fullName><default>false</default><label>81 - Independent Laboratory</label></value>
        <value><fullName>99</fullName><default>false</default><label>99 - Other</label></value>
    </valueSetDefinition></valueSet>
</CustomField>