force-app/main/default/objects/Superbill__c/fields/Rendering_Practitioner__c.field-meta.xml
<CustomField>
    <fullName>Rendering_Practitioner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rendering Practitioner</label>
    <referenceTo>Practitioner__c</referenceTo>
    <relationshipLabel>Rendered Superbills</relationshipLabel>
    <relationshipName>Rendered_Superbills</relationshipName>
    <type>Lookup</type>
</CustomField>