force-app/main/default/objects/Superbill__c/fields/Rendering_Provider_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Rendering_Provider_First_Name__c</fullName><label>Rendering Provider First Name</label><length>35</length><type>Text</type>
</CustomField>