force-app/main/default/objects/Superbill__c/fields/Rendering_Provider_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Rendering_Provider_Last_Name__c</fullName><label>Rendering Provider Last Name</label><length>60</length><type>Text</type>
</CustomField>