force-app/main/default/objects/Superbill__c/fields/Rendering_Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Rendering_Provider_Name__c</fullName>
    <label>Rendering Provider Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>