force-app/main/default/objects/Superbill__c/fields/Rendering_Provider_NPI__c.field-meta.xml
<CustomField>
    <fullName>Rendering_Provider_NPI__c</fullName>
    <label>Rendering Provider NPI</label>
    <length>10</length>
    <type>Text</type>
</CustomField>