force-app/main/default/objects/Superbill__c/fields/Snapshot_Refreshed_At__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Refreshed_At__c</fullName>
    <label>Snapshot Refreshed At</label>
    <type>DateTime</type>
</CustomField>