force-app/main/default/objects/Superbill__c/fields/Snapshot_Version__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Version__c</fullName>
    <label>Snapshot Version</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>