force-app/main/default/objects/Superbill__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Needs Review</fullName><default>false</default><label>Needs Review</label></value>
            <value><fullName>Ready</fullName><default>false</default><label>Ready</label></value>
            <value><fullName>Exported</fullName><default>false</default><label>Exported</label></value>
            <value><fullName>Voided</fullName><default>false</default><label>Voided</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>