force-app/main/default/objects/Superbill__c/fields/Subscriber_Country__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Country__c</fullName>
    <label>Subscriber Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>