force-app/main/default/objects/Superbill__c/fields/Subscriber_Group_Number__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Group_Number__c</fullName>
    <label>Subscriber Group Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>