force-app/main/default/objects/Superbill__c/fields/Subscriber_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Member_Id__c</fullName>
    <label>Subscriber Member ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>