force-app/main/default/objects/Superbill__c/fields/Subscriber_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Relationship__c</fullName>
    <label>Subscriber Relationship</label>
    <length>40</length>
    <type>Text</type>
</CustomField>