force-app/main/default/objects/Superbill__c/fields/Subscriber_Sex__c.field-meta.xml
<CustomField>
    <fullName>Subscriber_Sex__c</fullName>
    <label>Subscriber Sex</label>
    <length>40</length>
    <type>Text</type>
</CustomField>