force-app/main/default/objects/Superbill__c/fields/Validation_Messages__c.field-meta.xml
<CustomField>
    <fullName>Validation_Messages__c</fullName>
    <label>Validation Messages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>