force-app/main/default/objects/Superbill__c/validationRules/Encounter_Key_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Encounter_Key_Required</fullName>
    <active>true</active>
    <description>Superbills must be initialized by the claim-readiness service with an encounter idempotency key.</description>
    <errorConditionFormula>ISBLANK(Encounter_Key__c)</errorConditionFormula>
    <errorDisplayField>Encounter__c</errorDisplayField>
    <errorMessage>Initialize the superbill from the encounter Claim Readiness panel.</errorMessage>
</ValidationRule>