force-app/main/default/objects/Superbill__c/listViews/Claim_Readiness_Work_Queue.listView-meta.xml
<ListView>
    <fullName>Claim_Readiness_Work_Queue</fullName>
    <columns>NAME</columns>
    <columns>Encounter__c</columns>
    <columns>Patient__c</columns>
    <columns>Date_of_Service__c</columns>
    <columns>Status__c</columns>
    <columns>Coverage__c</columns>
    <columns>Rendering_Practitioner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Exported,Voided</value>
    </filters>
    <label>Claim Readiness Work Queue</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>